tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MassProcessing-AAAAAAAAAAAAAAAAAAAAEQ==__Playdohforbiggir-AAAAAAAAAAAAAAAAAAAH7w==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2031,
  "prerequisites": [
    12880365575383562570
  ],
  "properties": {
    "auto_claim": false,
    "desc": "I never wanna grow up, I wanna play with my mega extrusion machine.\nAnd in case you didn't read the description in NEI: You can use multiple input buses with a different extruder shape in each and then throw the items to extrude into the bus with the appropriate shape.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Play doh for big girls and boys",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    12880365575383562570
  ],
  "rewards": [],
  "tasks": []
}
