tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MassProcessing-AAAAAAAAAAAAAAAAAAAAEQ==__Puttingallthosew-AAAAAAAAAAAAAAAAAAAIBg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2054,
  "prerequisites": [
    12038758990578169035,
    2610
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The large scale auto-assembler will put things together for you, in volume. This multi is available in ZPM.\n\n[note]While it unlocks much later, has much fewer parallels, and has no TT energy hatch support in contrast to the Precise Assembler, it has one upside: If you use two energy hatches you can craft items of the next tier.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Putting all those workers out of jobs",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    12038758990578169035,
    2610
  ],
  "rewards": [],
  "tasks": []
}
