tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MassProcessing-AAAAAAAAAAAAAAAAAAAAEQ==__STEAMPOWEREDBREA-quLxATDCQFWsrZRuh_gspA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3513441395399994532,
  "prerequisites": [
    9149145682493310917
  ],
  "properties": {
    "auto_claim": false,
    "desc": "You should have quite the collection of single block Steam machines by now. While these may have gotten you through processing small amounts of materials, there will be a time when you will have to process a multitude of items. This is where Multiblocks come in.\n\nWhile these Multiblocks have a material cost that is way higher than their single block counterparts, they have certain bonuses: they use less Steam, and they can process recipes in parallel, which means that a single recipe cycle can craft multiple items at once, if the Steam provided is enough to sustain it.\n\nThey do however have some quirks that need to be taken care of:\n\n-These Multiblocks require §4§lvery specific§r I/O blocks, use only those that are part of the quest\n-They process up to 8 items, where the Basic Tier is made of Bronze and High Pressure Tier is made of Steel (checkout the Multiblock Preview in NEI which will show you different levels of tiers)\n-The Tier and amount of parallel processing can be seen via WAILA if you are looking at the Controller Block\n\n[note]With this quest, you have started your journey with Mass Processing. However, don't get too excited quite yet. While there are some Multiblocks accessible in the Steam Age, most of them only unlock in EV or later, including better versions of these Multiblocks.[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "STEAM-POWERED BREAKTHROUGH",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    9149145682493310917
  ],
  "rewards": [],
  "tasks": []
}
