tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MassProcessing-AAAAAAAAAAAAAAAAAAAAEQ==__SteamBlender-WEwrzX4ZRkSxJ3M6cBesfA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 9086370982949006460,
  "prerequisites": [
    3513441395399994532
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Why use fancy wiring and circuitry to blend dusts together when you can do the same thing with steam and pistons? The Steam Blender is the largest of these Steam Multiblocks and can handle your mixing needs for a while, having more parallel than an LV singleblock Mixer.\n\n[note]This Multiblock can only process recipes up to LV tier.[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Steam Blender?",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3513441395399994532
  ],
  "rewards": [],
  "tasks": []
}
